tests/errors/macro-argument-outside-macro.spcasm

macro has_argument(macro_argument)
  mov x,<macro_argument>
endmacro

label:
  mov x,<macro_argument>
